# backup-home

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
backup_home/: __main__.py  logger.py  upload.py
backup_home/backup/: __init__.py  linux.py  macos.py  windows.py
backup_home/platform/: __init__.py  linux.py  macos.py  windows.py
